<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.learninglogic.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtWelcome"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hintName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/txtLevel"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBasic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/txtBasic"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btnInter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/txtIntermediate"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btnAdvanced"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtAdvanced"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/createdBy"
        android:textSize="16sp"/>
</LinearLayout>
