<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnResults"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="34dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtResults"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txtTotal"
            android:textSize="112sp" />

        <TextView
            android:id="@+id/txtResMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtResMessage"
            android:textSize="24sp" />


        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/txtSend"
            android:onClick="shareResults"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:onClick="restartTest"
        android:text="Restart" />

</LinearLayout>